# Tag2RAG

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/settings/: mcp.json
docs/: conf.py  index.md  index.rst  project_ko.md  usage.md
examples/: basic_usage.py
monitoring/: prometheus.yml
src/: server.py
src/auth/: jwt_handler.py
src/core/: config.py  logger.py  redis_client.py
src/prompts/: base.py
src/tools/: crawler.py  metadata.py  summarizer.py
src/web_mcp/: __init__.py  resources.py  server.py  tools.py
src/web_search_mcp/: config.py  server.py
src/web_search_mcp/auth/: jwt_auth.py
src/web_search_mcp/core/: cache.py
src/web_search_mcp/resources/: report.py
src/web_search_mcp/tools/: crawler.py  metadata.py  summarizer.py
tests/: test_auth.py  test_resources.py  test_tools.py
