[project]
name = "web_mcp"
version = "0.1.0"
description = "Web search MCP server"
authors = [{name = "Example"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "redis",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "myst-parser"
]

[tool.setuptools.packages.find]
where = ["src"]

